# OpenADS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  TODO.md
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml
DA-Web/: GUIDE.md  README.md  index.php  setup.bat  setup.ps1
DA-Web/api/: connect.php  create_dd.php  dictionaries.php  execute_sql.php  session_state.php  table_data.php  tree.php
DA-Web/config/: dictionaries.json
DA-Web/css/: app.css
DA-Web/js/: app.js
bindings/php/: README.md  composer.json  phpunit.xml
bindings/php_ext/: .gitignore  Makefile.win  build.bat  openace64.def
docs/: Gemfile  _config.yml  index.md  known-issues.md  openads_studio_plan.md  wire-protocol.md
docs/_includes/: footer_custom.html  head_custom.html
docs/en/: architecture.md  benchmarks.md  getting-started.md  index.md  service-deployment.md  studio-guide.md  tls-deployment.md
docs/es/: arquitectura.md  benchmarks.md  guia-studio.md  index.md  primeros-pasos.md  servicio-despliegue.md  tls-despliegue.md
docs/pt/: arquitetura.md  benchmarks.md  guia-studio.md  index.md  primeiros-passos.md  servico-implantacao.md  tls-implantacao.md
examples/: README.md
examples/fivewin/: README.md  build64.cmd  build_msvc64.cmd  (+1 more)
src/: CMakeLists.txt  openads_ace.def
src/abi/: ace_exports.cpp  ace_stubs.cpp  ace_types.h  charset.cpp  charset.h  last_error.cpp  last_error.h  legacy_crt_shims.cpp  studio_embed.cpp
src/drivers/: dbf_common.cpp  dbf_common.h  driver_trait.h  memo_trait.h
src/drivers/adi/: adi_index.cpp  adi_index.h
src/drivers/adt/: adt_driver.cpp
src/drivers/cdx/: cdx_driver.cpp  cdx_driver.h  cdx_index.cpp  cdx_index.h
src/drivers/dbt/: dbt_memo.cpp  dbt_memo.h
src/drivers/ntx/: ntx_driver.cpp  ntx_driver.h  ntx_index.cpp  ntx_index.h
src/engine/: aes.cpp  aes.h  aof_eval.cpp  aof_eval.h  aof_expr.cpp  aof_expr.h  data_dict.cpp  data_dict.h  fts.cpp  fts.h  index_expr.cpp  index_expr.h  lock_mgr.cpp  lock_mgr.h  order.h  table.cpp  table.h  tx.cpp  tx.h  tx_log.cpp  tx_log.h
src/mgmt/: mg_collector.cpp  mg_collector.h  mg_snapshot.h  mg_stats.h
src/network/: client.cpp  client.h  mg_wire.cpp  mg_wire.h  server.cpp  server.h  socket.h  socket_posix.cpp  socket_win32.cpp  tls_transport.cpp  tls_transport.h  transport.h  wire.h
src/platform/: dll.h  dll_posix.cpp  dll_win32.cpp  file.h  file_posix.cpp  file_win32.cpp  lock.h  lock_posix.cpp  lock_win32.cpp  path.cpp  path.h  proc.cpp  proc.h  time.cpp  time.h
src/session/: connection.cpp  connection.h  handle_registry.cpp  handle_registry.h
src/sql/: parser.cpp  parser.h
src/util/: log.cpp  log.h
tests/: CMakeLists.txt
tests/fixtures/: test_aep_proc.cpp
tests/harbour_smoke/: README.md  make_cdx.cpp  make_data.ps1  probe_cdx.cpp  probe_cdx2.cpp  run_build.bat  smoke.prg  smoke_out.txt
tests/smoke/: README.md
tests/smoke/harbour/: README.md  build.cmd  fieldlenprobe.prg  fieldlenprobe_build.bat  idxcheck_build.bat  idxprobe.prg  manage_probe.prg  posprobe.prg  run_build.bat
tests/smoke/xsharp/: AdsSmoke.prg  AdsSmoke.xsproj  README.md
tests/unit/: abi_adi_smoke_test.cpp  abi_adt_create_test.cpp  abi_aep_test.cpp  abi_aof_test.cpp  abi_append_autolock_test.cpp  abi_binary_memo_test.cpp  abi_copy_table_test.cpp  abi_create_index61_test.cpp  abi_create_table_test.cpp  abi_dd_crud_test.cpp  abi_dd_field_prop_test.cpp  abi_dd_perms_test.cpp  abi_dd_persistence_test.cpp  abi_dd_proc_view_test.cpp  abi_dd_ri_test.cpp  abi_dd_table_prop_test.cpp  abi_dd_test.cpp  abi_dd_trigger_test.cpp  abi_encryption_test.cpp  abi_enum_test.cpp  abi_find_table_test.cpp  abi_fts_search_test.cpp  abi_fts_test.cpp  abi_gobottom_filtered_test.cpp  abi_index_direction_test.cpp  abi_index_smoke_test.cpp  abi_lock_retry_test.cpp  abi_m4_smoke_test.cpp  abi_m5_smoke_test.cpp  abi_m5x_recovery_test.cpp  abi_m92_real_test.cpp  abi_memo_large_test.cpp  abi_mgmt_test.cpp  abi_misc_impls_test.cpp  abi_ntx_multitag_test.cpp  abi_open_index_order_test.cpp  abi_rddtst_repro_test.cpp  abi_refresh_extract_test.cpp  abi_reindex_test.cpp  abi_remote_overloads_test.cpp  (+55 more)
tools/stress/: CMakeLists.txt  concurrency_main.cpp  main.cpp  memo_main.cpp  memo_zip_main.cpp
(+64 files in other folders)
